@@ -1,3 +1,7 @@
+2001-02-06  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Fixed a few memory leaks when SHPOpen() fails. 
+
 2000-12-05  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Fix from Craig Bruce (Cubewerx) for DBFReadAttribute() for
